--- a/index.html
+++ b/index.html
@@ -17,21 +17,90 @@
             <a href="#logo" class="logo"></a>
             <a href="#logo" class="logo1">NW</a>
             <a href="#logo" class="logo2">Gallery</a>
-            <a href="#news">News</a>
-            <a href="#store">Store</a>
-            <a href="#books">Books</a>
-            <a href="#workshops">Workshops</a>
-            <a href="#about">About</a>
+            <a href="news.html#news">News</a>
+            <a href="store.html#store">Store</a>
+            <a href="books.html#books">Books</a>
+            <a href="workshops.html#workshop">Workshops</a>
+            <a href="about.html#about">About</a>
         </nav>
 
     </header>
 
 
     <section id="landingpage">
-        <div class="sectionwrapper">
+        <div class="sectionwrapper"></div>
+    </section>
 
+
+    <section id="news">
+        <div class="sectionwrapper">
+            <div class="col_top"></div>
+            <div class="col_bottom">
+                - More news
+            </div>
         </div>
     </section>
+
+
+    <section id="store">
+        <h1>Store</h1>
+        <div class="sectionwrapper">
+            <div class="top">
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+            <div class="bottom">
+                <div class="col_bottom"></div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="books">
+        <h1>Books</h1>
+        <div class="sectionwrapper">
+            <div class="top">
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+            <div class="bottom">
+                <div class="col"></div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="workshops">
+        <h1>Workshops</h1>
+        <div class="sectionwrapper">
+            <div class="col_top"></div>
+            <div class="col_mid"></div>
+            <div class="col_bottom"></div>
+        </div>
+    </section>
+
+
+    <section id="about">
+        <h1>About</h1>
+        <div class="sectionwrapper">
+            <div class="top">
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+            <div class="bottom"></div>
+        </div>
+    </section>
+
+    <section id="footer">
+        <div class="sectionwrapper">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+    </section>
+
+
+
+
 
     <div id="big_logo" class="transform"></div>
     <div class="big_logo_text">NW</div>
@@ -40,31 +109,12 @@
 
     <div class="news_skew"></div>
     <h1 class="news">News</h1>
+
     <section id="news">
-
-
-
-
         <div class="sectionwrapper">
             <div class="col_top"></div>
             <div class="col_bottom">- More news</div>
         </div>
-    </section>
-    <h1 class="store">Store</h1>
-    <section id="store">
-
-    </section>
-
-    <section id="books">
-        <h1>Books</h1>
-    </section>
-
-    <section id="workshops">
-        <h1>Workshops</h1>
-    </section>
-
-    <section id="about">
-        <h1>About</h1>
     </section>
 
 
