--- a/about.html
+++ b/about.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>NW Gallery Cph</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,9 +14,9 @@
     <header>
         <nav>
             <!--            <a href="#splash">Forside</a>-->
-            <a href="#logo" class="logo"></a>
-            <a href="#logo" class="logo1">NW</a>
-            <a href="#logo" class="logo2">Gallery</a>
+            <a href="index.html#logo" class="logo"></a>
+            <a href="index.html#logo" class="logo1">NW</a>
+            <a href="index.html#logo" class="logo2">Gallery</a>
             <a href="news.html#news">News</a>
             <a href="store.html#store">Store</a>
             <a href="books.html#books">Books</a>
@@ -24,6 +25,65 @@
         </nav>
 
     </header>
+
+    <section id="about_gallery">
+        <h1>About</h1>
+        <div class="sectionwrapper">
+            <div class="top">
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error, deserunt recusandae voluptatem praesentium numquam laborum suscipit, ratione voluptates aliquid quam eveniet quod quo, sapiente! Voluptate voluptates quos aliquid nesciunt.
+                    </p>
+                </div>
+            </div>
+            <div class="mid1">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error, deserunt recusandae voluptatem praesentium numquam laborum suscipit, ratione voluptates aliquid quam eveniet quod quo, sapiente! Voluptate voluptates quos aliquid nesciunt.
+                </p>
+            </div>
+            <div class="mid2">
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+            </div>
+            <div class="bottom">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error, deserunt recusandae voluptatem praesentium numquam laborum suscipit, ratione voluptates aliquid quam eveniet quod quo, sapiente! Voluptate voluptates quos aliquid nesciunt.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <h1>Footer</h1>
+        <div class="sectionwrapper">
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                </p>
+            </div>
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                </p>
+            </div>
+        </div>
+    </footer>
 
 
     <script src=""></script>
