--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <nav>
             <!--            <a href="#splash">Forside</a>-->
-            <a href="#logo" class="logo"></a>
-            <a href="#logo" class="logo1">NW</a>
-            <a href="#logo" class="logo2">Gallery</a>
+            <a href="index.html#logo" class="logo"></a>
+            <a href="index.html#logo" class="logo1">NW</a>
+            <a href="index.html#logo" class="logo2">Gallery</a>
             <a href="news.html#news">News</a>
             <a href="store.html#store">Store</a>
             <a href="books.html#books">Books</a>
@@ -33,11 +33,11 @@
 
 
     <section id="news">
+        <h1>NEWS</h1>
         <div class="sectionwrapper">
-            <div class="col_top"></div>
-            <div class="col_bottom">
-                - More news
-            </div>
+            <img src="billeder/svampebob.png">
+
+            <button>- More</button>
         </div>
     </section>
 
@@ -46,12 +46,14 @@
         <h1>Store</h1>
         <div class="sectionwrapper">
             <div class="top">
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi voluptates minus nam, recusandae quis quam odit voluptatem quaerat sed consequuntur, soluta quibusdam eaque quos optio amet asperiores consequatur, consectetur quisquam.</p>
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
             </div>
-            <div class="bottom">
-                <div class="col_bottom"></div>
-            </div>
+            <button>- More</button>
         </div>
     </section>
 
@@ -60,12 +62,14 @@
         <h1>Books</h1>
         <div class="sectionwrapper">
             <div class="top">
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium voluptate optio quibusdam perspiciatis, officia fugit sapiente odio soluta adipisci, quisquam eos aliquam consequatur maxime autem quam rerum ducimus ab velit?</p>
+                </div>
+                <div class="col">
+                    <img src="billeder/svampebob.png">
+                </div>
             </div>
-            <div class="bottom">
-                <div class="col"></div>
-            </div>
+            <button>- More</button>
         </div>
     </section>
 
@@ -73,9 +77,15 @@
     <section id="workshops">
         <h1>Workshops</h1>
         <div class="sectionwrapper">
-            <div class="col_top"></div>
-            <div class="col_mid"></div>
-            <div class="col_bottom"></div>
+            <div class="col_top">
+                <img src="billeder/svampebob.png">
+            </div>
+            <div class="col_mid">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus suscipit omnis, minus molestiae iure, atque autem, quaerat optio, numquam ex quam sequi deleniti. Beatae voluptatum, omnis. Accusamus quis repellendus ad!</p>
+            </div>
+            <div class="col_bottom">
+                <button>- More</button>
+            </div>
         </div>
     </section>
 
@@ -84,46 +94,33 @@
         <h1>About</h1>
         <div class="sectionwrapper">
             <div class="top">
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <img src="billeder/svampebob.png">
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolorem similique mollitia maiores sunt, aliquam eos! Officia iusto assumenda fuga enim, saepe nam a, omnis consectetur illo ea magnam.</p>
+                </div>
             </div>
-            <div class="bottom"></div>
+            <button>- More</button>
         </div>
     </section>
 
-    <section id="footer">
+
+    <footer>
+        <h1>Footer</h1>
         <div class="sectionwrapper">
-            <div class="col"></div>
-            <div class="col"></div>
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati sed ducimus tenetur, similique, delectus aspernatur, minima sunt quo quidem atque unde ratione dolor sapiente alias placeat, ipsa aliquid ipsam?
+                </p>
+            </div>
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati sed ducimus tenetur, similique, delectus aspernatur, minima sunt quo quidem atque unde ratione dolor sapiente alias placeat, ipsa aliquid ipsam?
+                </p>
+            </div>
         </div>
-    </section>
-
-
-
-
-
-    <div id="big_logo" class="transform"></div>
-    <div class="big_logo_text">NW</div>
-    <div class="big_logo_text1">Gallery</div>
-
-
-    <div class="news_skew"></div>
-    <h1 class="news">News</h1>
-
-    <section id="news">
-        <div class="sectionwrapper">
-            <div class="col_top"></div>
-            <div class="col_bottom">- More news</div>
-        </div>
-    </section>
-
-
-
-
-
-
-
-
+    </footer>
 
 
     <script src=""></script>
