--- a/kalender_buy.html
+++ b/kalender_buy.html
@@ -23,39 +23,27 @@
             <a href="workshops.html#workshop">Workshops</a>
             <a href="about.html#about">About</a>
         </nav>
+
     </header>
 
-    <h1>Store</h1>
-
-    <section id="onlineshop">
-        <h1>Onlineshop</h1>
+    <section id="kalender_buy">
         <div class="sectionwrapper">
-            <div class="top">
-                <div class="col">
+            <h2>Kalender</h2>
+            <h3>Made by</h3>
+            <div class="col">
+                <div class="col_narrow">
                     <img src="">
                 </div>
-                <div class="col">
-                    <img src="">
+                <div class="col_wide">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae ab accusamus assumenda, doloremque laborum pariatur voluptate nisi quod excepturi ex, architecto laboriosam! Minima vero, sed libero eaque! Optio, porro, eius.
+                    </p>
+                    <button>Køb</button>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <section id="shop_in_store">
-        <h1>Shop in store</h1>
-        <div class="sectionwrapper">
-            <div class="col">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-            </div>
-            <div class="col">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae ab accusamus assumenda, doloremque laborum pariatur voluptate nisi quod excepturi ex, architecto laboriosam! Minima vero, sed libero eaque! Optio, porro, eius.
+            </p>
         </div>
     </section>
 
