--- a/news.html
+++ b/news.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>NW Gallery Cph</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,9 +14,9 @@
     <header>
         <nav>
             <!--            <a href="#splash">Forside</a>-->
-            <a href="#logo" class="logo"></a>
-            <a href="#logo" class="logo1">NW</a>
-            <a href="#logo" class="logo2">Gallery</a>
+            <a href="index.html#logo" class="logo"></a>
+            <a href="index.html#logo" class="logo1">NW</a>
+            <a href="index.html#logo" class="logo2">Gallery</a>
             <a href="news.html#news">News</a>
             <a href="store.html#store">Store</a>
             <a href="books.html#books">Books</a>
@@ -25,6 +26,115 @@
 
     </header>
 
+    <h1>News</h1>
+
+    <section id="close">
+        <h1>Close</h1>
+        <div class="sectionwrapper">
+            <div class="top">
+                <div class="col_wide">
+                    <img src="">
+                </div>
+                <div class="col_narrow">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit autem molestias, sapiente unde praesentium repellendus corporis incidunt nemo architecto blanditiis. Cupiditate consequuntur dignissimos soluta, perferendis suscipit ut, expedita quia itaque!
+                    </p>
+                </div>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit autem molestias, sapiente unde praesentium repellendus corporis incidunt nemo architecto blanditiis. Cupiditate consequuntur dignissimos soluta, perferendis suscipit ut, expedita quia itaque!
+            </p>
+        </div>
+    </section>
+
+    <section id="kalender">
+        <h1>Kalender</h1>
+        <div class="sectionwrapper">
+            <div class="col_top">
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+            </div>
+            <div class="col_mid">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit autem molestias, sapiente unde praesentium repellendus corporis incidunt nemo architecto blanditiis. Cupiditate consequuntur dignissimos soluta, perferendis suscipit ut, expedita quia itaque!
+                </p>
+            </div>
+            <button>Køb nu</button>
+        </div>
+    </section>
+
+    <section id="new_program">
+        <h1>New program</h1>
+        <div class="sectionwrapper">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium tempore consequatur amet facere assumenda reprehenderit laboriosam voluptatem veritatis fuga magnam eveniet quas, excepturi quaerat, maiores commodi incidunt voluptatibus necessitatibus. Vero.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam hic dignissimos, quo eos, unde non. Beatae ipsam sint repudiandae eaque, dolores quam, id doloremque praesentium sapiente tenetur nostrum libero.
+            </p>
+        </div>
+    </section>
+
+    <section id="autumn_salon">
+        <h1>Autumn salon</h1>
+        <div class="sectionwrapper">
+            <div class="col_top">
+                <div class="col_wide">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. In corrupti quos consequatur quae libero obcaecati, pariatur eos natus, itaque error expedita ut consectetur aperiam illum enim maiores, veritatis non beatae.
+                    </p>
+                </div>
+                <div class="col_narrow">
+                    <img src="">
+                </div>
+            </div>
+            <div class="col_mid">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                </p>
+            </div>
+            <div class="col_bottom">
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <h1>Footer</h1>
+        <div class="sectionwrapper">
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                </p>
+            </div>
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <script src=""></script>
 </body>
