--- a/workshop_buy.html
+++ b/workshop_buy.html
@@ -23,38 +23,32 @@
             <a href="workshops.html#workshop">Workshops</a>
             <a href="about.html#about">About</a>
         </nav>
+
     </header>
 
-    <h1>Store</h1>
-
-    <section id="onlineshop">
-        <h1>Onlineshop</h1>
+    <section id="workshops_buy">
+        <h1>Workshop navn</h1>
         <div class="sectionwrapper">
-            <div class="top">
+            <img src="">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio nostrum libero quo voluptates ea eveniet vitae quos dolorem unde. Doloribus corporis quam tempore deleniti sit necessitatibus accusantium totam, voluptatem eos.
+            </p>
+            <div class="col_bottom">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio nostrum libero quo voluptates ea eveniet vitae quos dolorem unde. Doloribus corporis quam tempore deleniti sit necessitatibus accusantium totam, voluptatem eos.
+                </p>
                 <div class="col">
                     <img src="">
                 </div>
                 <div class="col">
                     <img src="">
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="shop_in_store">
-        <h1>Shop in store</h1>
-        <div class="sectionwrapper">
-            <div class="col">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-            </div>
-            <div class="col">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+                <div class="col">
+                    <img src="">
+                </div>
+                <div class="col">
+                    <img src="">
+                </div>
             </div>
         </div>
     </section>
