--- a/books_buy.html
+++ b/books_buy.html
@@ -23,38 +23,23 @@
             <a href="workshops.html#workshop">Workshops</a>
             <a href="about.html#about">About</a>
         </nav>
+
     </header>
 
-    <h1>Store</h1>
-
-    <section id="onlineshop">
-        <h1>Onlineshop</h1>
+    <section id="books_buy">
         <div class="sectionwrapper">
-            <div class="top">
-                <div class="col">
-                    <img src="">
-                </div>
-                <div class="col">
-                    <img src="">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="shop_in_store">
-        <h1>Shop in store</h1>
-        <div class="sectionwrapper">
-            <div class="col">
-                <img src="">
-                <img src="">
-                <img src="">
+            <div class="col_narrow">
                 <img src="">
             </div>
-            <div class="col">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+            <div class="col_wide">
+                <h2>Kalender</h2>
+                <h3>Made by</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit soluta inventore voluptate in eum, aliquid quia nesciunt ad facere labore error, excepturi tempora quaerat magni repellat enim harum recusandae dolor.
+                </p>
+                <div class="col">
+                    <button>Find i butik</button>
+                </div>
             </div>
         </div>
     </section>
