--- a/workshops.html
+++ b/workshops.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>NW Gallery Cph</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,9 +14,9 @@
     <header>
         <nav>
             <!--            <a href="#splash">Forside</a>-->
-            <a href="#logo" class="logo"></a>
-            <a href="#logo" class="logo1">NW</a>
-            <a href="#logo" class="logo2">Gallery</a>
+            <a href="index.html#logo" class="logo"></a>
+            <a href="index.html#logo" class="logo1">NW</a>
+            <a href="index.html#logo" class="logo2">Gallery</a>
             <a href="news.html#news">News</a>
             <a href="store.html#store">Store</a>
             <a href="books.html#books">Books</a>
@@ -25,6 +26,32 @@
 
     </header>
 
+    <section id="workshop_site">
+        <h1>
+            Workshops
+        </h1>
+        <div class="sectionwrapper">
+            <img src="">
+            <img src="">
+            <img src="">
+        </div>
+    </section>
+
+    <footer>
+        <h1>Footer</h1>
+        <div class="sectionwrapper">
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                </p>
+            </div>
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <script src=""></script>
 </body>
