skelet med svampebob billeder

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
-                    <img src="">
+                    <img src="billeder/svampebob.png">
                 </div>
                 <div class="col">
                     <p>
@@ -46,7 +46,7 @@
             </div>
             <div class="mid2">
                 <div class="col">
-                    <img src="">
+                    <img src="billeder/svampebob.png">
                 </div>
                 <div class="col">
                     <img src="">
