--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col_wide">
-                    <img src="">
+                    <img src="billeder/svampebob.png">
                 </div>
                 <div class="col_narrow">
                     <p>
@@ -52,7 +52,7 @@
         <div class="sectionwrapper">
             <div class="col_top">
                 <div class="col">
-                    <img src="">
+                    <img src="billeder/svampebob.png">
                 </div>
                 <div class="col">
                     <img src="">
