jeppe, fælles style

--- a/index.html
+++ b/index.html
@@ -28,22 +28,41 @@
 
 
     <section id="landingpage">
-        <div class="sectionwrapper"></div>
+        <div class="sectionwrapper">
+            <div class="skew_grey"></div>
+            <h1>NEWS</h1>
+        </div>
+
     </section>
 
 
     <section id="news">
-        <h1>NEWS</h1>
+        <div class="skew_white"></div>
         <div class="sectionwrapper">
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
             <img src="billeder/svampebob.png">
 
             <button>- More</button>
+            <h1>STORE</h1>
         </div>
+
     </section>
 
 
     <section id="store">
-        <h1>Store</h1>
+        <div class="skew_grey"></div>
+
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
@@ -55,12 +74,13 @@
                 </div>
             </div>
             <button>- More</button>
+            <h1>BOOKS</h1>
         </div>
     </section>
 
 
     <section id="books">
-        <h1>Books</h1>
+        <div class="skew_white"></div>
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
@@ -72,12 +92,14 @@
                 </div>
             </div>
             <button>- More</button>
+            <h1>WORKSHOPS</h1>
         </div>
     </section>
 
 
     <section id="workshops">
-        <h1>Workshops</h1>
+        <div class="skew_grey"></div>
+
         <div class="sectionwrapper">
             <div class="col_top">
                 <img src="billeder/svampebob.png">
@@ -87,13 +109,15 @@
             </div>
             <div class="col_bottom">
                 <button>- More</button>
+
             </div>
+            <h1>ABOUT</h1>
         </div>
     </section>
 
 
     <section id="about">
-        <h1>About</h1>
+        <div class="skew_white"></div>
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
@@ -104,12 +128,14 @@
                 </div>
             </div>
             <button>- More</button>
+            <h1>Footer</h1>
         </div>
     </section>
 
 
-    <footer>
-        <h1>Footer</h1>
+    <footer id="footer">
+        <div class="skew_grey"></div>
+
         <div class="sectionwrapper">
             <div class="col">
                 <p>
