--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
     <section id="landingpage">
         <div class="sectionwrapper">
-            <div class="skew_grey"></div>
+            <div class="skew_grey">
+                <img src="img/logo/NWgallery_left_white.png">
+            </div>
             <h1>NEWS</h1>
         </div>
 
@@ -51,7 +53,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <img src="billeder/svampebob.png">
+            <img src="img/svampebob.png">
 
             <button>- More</button>
             <h1>STORE</h1>
@@ -66,7 +68,7 @@
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
-                    <img src="billeder/svampebob.png">
+                    <img src="img/svampebob.png">
                 </div>
                 <div class="col">
 
@@ -84,7 +86,7 @@
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
-                    <img src="billeder/svampebob.png">
+                    <img src="img/svampebob.png">
                 </div>
                 <div class="col">
 
@@ -102,7 +104,7 @@
 
         <div class="sectionwrapper">
             <div class="col_top">
-                <img src="billeder/svampebob.png">
+                <img src="img/svampebob.png">
             </div>
             <div class="col_mid">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus suscipit omnis, minus molestiae iure, atque autem, quaerat optio, numquam ex quam sequi deleniti. Beatae voluptatum, omnis. Accusamus quis repellendus ad!</p>
@@ -121,7 +123,7 @@
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
-                    <img src="billeder/svampebob.png">
+                    <img src="img/svampebob.png">
                 </div>
                 <div class="col">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolorem similique mollitia maiores sunt, aliquam eos! Officia iusto assumenda fuga enim, saepe nam a, omnis consectetur illo ea magnam.</p>
@@ -152,6 +154,4 @@
 
 
     <script src=""></script>
-</body>
-
-</html>
+</body></html>
