--- a/index.html
+++ b/index.html
@@ -61,14 +61,11 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-<<<<<<< HEAD
+            <<<<<<< HEAD=======<img src="img/svampebob.png">
+                >>>>>>> origin/master
 
-=======
-            <img src="img/svampebob.png">
->>>>>>> origin/master
-
-            <a href="news.html#news"><button>- More</button></a>
-            <h1>STORE</h1>
+                <a href="news.html#news"><button>- More</button></a>
+                <h1>STORE</h1>
         </div>
 
     </section>
@@ -80,11 +77,8 @@
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
-<<<<<<< HEAD
-
-=======
-                    <img src="img/svampebob.png">
->>>>>>> origin/master
+                    <<<<<<< HEAD=======<img src="img/svampebob.png">
+                        >>>>>>> origin/master
                 </div>
                 <div class="col">
 
@@ -102,11 +96,8 @@
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
-<<<<<<< HEAD
-
-=======
-                    <img src="img/svampebob.png">
->>>>>>> origin/master
+                    <<<<<<< HEAD=======<img src="img/svampebob.png">
+                        >>>>>>> origin/master
                 </div>
                 <div class="col">
 
@@ -124,11 +115,8 @@
 
         <div class="sectionwrapper">
             <div class="col_top">
-<<<<<<< HEAD
-
-=======
-                <img src="img/svampebob.png">
->>>>>>> origin/master
+                <<<<<<< HEAD=======<img src="img/svampebob.png">
+                    >>>>>>> origin/master
             </div>
             <div class="col_mid">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus suscipit omnis, minus molestiae iure, atque autem, quaerat optio, numquam ex quam sequi deleniti. Beatae voluptatum, omnis. Accusamus quis repellendus ad!</p>
@@ -147,11 +135,8 @@
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
-<<<<<<< HEAD
-
-=======
-                    <img src="img/svampebob.png">
->>>>>>> origin/master
+                    <<<<<<< HEAD=======<img src="img/svampebob.png">
+                        >>>>>>> origin/master
                 </div>
                 <div class="col">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolorem similique mollitia maiores sunt, aliquam eos! Officia iusto assumenda fuga enim, saepe nam a, omnis consectetur illo ea magnam.</p>
@@ -184,4 +169,6 @@
 
 
     <script src=""></script>
-</body></html>
+</body>
+
+</html>
