--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!--            <a href="#splash">Forside</a>-->
 
             <a href="news.html#news">News</a>
-            <a href="store.html#store">Store</a>
+            <a href="store.html#store">Boutique</a>
             <a href="books.html#books">Books</a>
             <a href="workshops.html#workshop">Workshops</a>
             <a href="about.html#about">About</a>
@@ -60,7 +60,7 @@
             <div id="more_button"><a href="news.html#news">- More</a> </div>
 
 
-            <h1>STORE</h1>
+            <h1>BOUTIQUE</h1>
         </div>
 
     </section>
@@ -71,10 +71,10 @@
 
         <div class="sectionwrapper">
             <div class="top">
-                <div class="col">
+                <div class="col_narrow">
 
                 </div>
-                <div class="col">
+                <div class="col_wide">
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi voluptates minus nam, recusandae quis quam odit voluptatem quaerat sed consequuntur, soluta quibusdam eaque quos optio amet asperiores consequatur, consectetur quisquam.</p>
                 </div>
